...
                    Button {
                        withAnimation(.default) {
                            viewModel.addProject()
                        }
                        
                    } label: {
                        Label("Add New Project",systemImage: "plus")
                    }
            }
        }
    }
    var sortOptionsToolbar: some ToolbarContent {
        ToolbarItem(placement: .navigationBarLeading) {
...
